Move Data / Finish Transforms
* track data in each notebook directory
* calculate performance points
* merge points and pricing

--- a/src/notebooks/f1_fantasy_track/01_get_f1_fantasy_tracker.ipynb
+++ b/src/notebooks/f1_fantasy_track/01_get_f1_fantasy_tracker.ipynb
@@ -1398,7 +1398,7 @@
     "frame_labels = ['team_pts', 'driver_pts', 'team_price', 'driver_price']\n",
     "\n",
     "for i, frame in enumerate(frames):\n",
-    "    frame.to_csv(f'../../data/f1_fan_track/{frame_labels[i]}.csv', sep='|')\n",
+    "    frame.to_csv(f'./data/raw/{frame_labels[i]}.csv', sep='|')\n",
     "    "
    ]
   },
