Handle NAs in Sentiment Notebook

--- a/src/notebooks/f1_fantasy_track/04_sentiment_ts_analysis.ipynb
+++ b/src/notebooks/f1_fantasy_track/04_sentiment_ts_analysis.ipynb
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "c8eb83e5-d564-46b7-a9c2-be29bb78b687",
    "metadata": {},
    "outputs": [
@@ -639,39 +639,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>Charles Leclerc  LEC  Ferrari</td>\n",
-       "      <td>2022-06-18 14:25:02</td>\n",
-       "      <td>-94</td>\n",
-       "      <td>-94</td>\n",
-       "      <td>-58</td>\n",
-       "      <td>-94.0</td>\n",
-       "      <td>18.9</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>1.66</td>\n",
-       "      <td>0 days 01:53:18</td>\n",
-       "      <td>-59.0</td>\n",
-       "      <td>-88.0</td>\n",
-       "      <td>-56.0</td>\n",
-       "      <td>-14.0</td>\n",
-       "      <td>-0.1</td>\n",
+       "      <th>398</th>\n",
+       "      <td>Sergio Perez  PER  Red Bull</td>\n",
+       "      <td>2022-06-13 16:20:06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.3</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>0 days 03:59:51</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-97.0</td>\n",
+       "      <td>0.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>Charles Leclerc  LEC  Ferrari</td>\n",
-       "      <td>2022-06-18 15:01:00</td>\n",
-       "      <td>-48</td>\n",
-       "      <td>-48</td>\n",
-       "      <td>46</td>\n",
-       "      <td>-48.0</td>\n",
-       "      <td>18.8</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>1.67</td>\n",
-       "      <td>0 days 00:35:58</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>104.0</td>\n",
-       "      <td>46.0</td>\n",
+       "      <th>242</th>\n",
+       "      <td>Lewis Hamilton  HAM  Mercedes</td>\n",
+       "      <td>2022-06-15 10:22:25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0 days 23:00:47</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>99.0</td>\n",
        "      <td>-0.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -693,22 +693,22 @@
        "      <td>0.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>Fernando Alonso  ALO  Alpine</td>\n",
-       "      <td>2022-06-18 15:01:00</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>-69</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>12.4</td>\n",
-       "      <td>12.5</td>\n",
-       "      <td>0.64</td>\n",
-       "      <td>0 days 00:35:58</td>\n",
-       "      <td>-69.0</td>\n",
-       "      <td>-65.0</td>\n",
-       "      <td>-104.0</td>\n",
-       "      <td>-69.0</td>\n",
-       "      <td>0.1</td>\n",
+       "      <th>42</th>\n",
+       "      <td>Charles Leclerc  LEC  Ferrari</td>\n",
+       "      <td>2022-06-18 14:25:02</td>\n",
+       "      <td>-94</td>\n",
+       "      <td>-94</td>\n",
+       "      <td>-58</td>\n",
+       "      <td>-94.0</td>\n",
+       "      <td>18.9</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1.66</td>\n",
+       "      <td>0 days 01:53:18</td>\n",
+       "      <td>-59.0</td>\n",
+       "      <td>-88.0</td>\n",
+       "      <td>-56.0</td>\n",
+       "      <td>-14.0</td>\n",
+       "      <td>-0.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>134</th>\n",
@@ -726,60 +726,6 @@
        "      <td>10.0</td>\n",
        "      <td>-85.0</td>\n",
        "      <td>-64.0</td>\n",
-       "      <td>0.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>228</th>\n",
-       "      <td>Lando Norris  NOR  Mclaren</td>\n",
-       "      <td>2022-06-19 09:05:33</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>15.7</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>1.01</td>\n",
-       "      <td>0 days 18:04:33</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>-0.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>242</th>\n",
-       "      <td>Lewis Hamilton  HAM  Mercedes</td>\n",
-       "      <td>2022-06-15 10:22:25</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>99</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>0.65</td>\n",
-       "      <td>0 days 23:00:47</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>-0.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>342</th>\n",
-       "      <td>Pierre Gasly  GAS  AlphaTauri</td>\n",
-       "      <td>2022-06-18 15:01:00</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-90</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>0 days 00:35:58</td>\n",
-       "      <td>-9.0</td>\n",
-       "      <td>-11.0</td>\n",
-       "      <td>-103.0</td>\n",
-       "      <td>-90.0</td>\n",
        "      <td>0.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -801,6 +747,78 @@
        "      <td>0.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Charles Leclerc  LEC  Ferrari</td>\n",
+       "      <td>2022-06-18 15:01:00</td>\n",
+       "      <td>-48</td>\n",
+       "      <td>-48</td>\n",
+       "      <td>46</td>\n",
+       "      <td>-48.0</td>\n",
+       "      <td>18.8</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1.67</td>\n",
+       "      <td>0 days 00:35:58</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>-0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>Fernando Alonso  ALO  Alpine</td>\n",
+       "      <td>2022-06-18 15:01:00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-69</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>12.4</td>\n",
+       "      <td>12.5</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0 days 00:35:58</td>\n",
+       "      <td>-69.0</td>\n",
+       "      <td>-65.0</td>\n",
+       "      <td>-104.0</td>\n",
+       "      <td>-69.0</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342</th>\n",
+       "      <td>Pierre Gasly  GAS  AlphaTauri</td>\n",
+       "      <td>2022-06-18 15:01:00</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-90</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0 days 00:35:58</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-11.0</td>\n",
+       "      <td>-103.0</td>\n",
+       "      <td>-90.0</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228</th>\n",
+       "      <td>Lando Norris  NOR  Mclaren</td>\n",
+       "      <td>2022-06-19 09:05:33</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>15.7</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>0 days 18:04:33</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>-0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>389</th>\n",
        "      <td>Sebastian Vettel  VET  Aston Martin</td>\n",
        "      <td>2022-06-19 09:05:33</td>\n",
@@ -818,90 +836,72 @@
        "      <td>-94.0</td>\n",
        "      <td>0.1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>398</th>\n",
-       "      <td>Sergio Perez  PER  Red Bull</td>\n",
-       "      <td>2022-06-13 16:20:06</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>18.3</td>\n",
-       "      <td>17.5</td>\n",
-       "      <td>1.82</td>\n",
-       "      <td>0 days 03:59:51</td>\n",
-       "      <td>-9.0</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-97.0</td>\n",
-       "      <td>0.1</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "                                  Driver                  ts  12 Hour  3 Hour  \\\n",
-       "42         Charles Leclerc  LEC  Ferrari 2022-06-18 14:25:02      -94     -94   \n",
-       "43         Charles Leclerc  LEC  Ferrari 2022-06-18 15:01:00      -48     -48   \n",
-       "110         Fernando Alonso  ALO  Alpine 2022-06-18 12:31:44        5       5   \n",
-       "112         Fernando Alonso  ALO  Alpine 2022-06-18 15:01:00        6       6   \n",
-       "134        George Russell  RUS  Mercedes 2022-06-18 14:25:02       15      15   \n",
-       "228           Lando Norris  NOR  Mclaren 2022-06-19 09:05:33        0       0   \n",
-       "242        Lewis Hamilton  HAM  Mercedes 2022-06-15 10:22:25        0       0   \n",
-       "342        Pierre Gasly  GAS  AlphaTauri 2022-06-18 15:01:00        9       9   \n",
-       "387  Sebastian Vettel  VET  Aston Martin 2022-06-18 14:25:02       54      54   \n",
-       "389  Sebastian Vettel  VET  Aston Martin 2022-06-19 09:05:33        0       0   \n",
        "398          Sergio Perez  PER  Red Bull 2022-06-13 16:20:06        1       1   \n",
+       "242        Lewis Hamilton  HAM  Mercedes 2022-06-15 10:22:25        0       0   \n",
+       "110         Fernando Alonso  ALO  Alpine 2022-06-18 12:31:44        5       5   \n",
+       "42         Charles Leclerc  LEC  Ferrari 2022-06-18 14:25:02      -94     -94   \n",
+       "134        George Russell  RUS  Mercedes 2022-06-18 14:25:02       15      15   \n",
+       "387  Sebastian Vettel  VET  Aston Martin 2022-06-18 14:25:02       54      54   \n",
+       "43         Charles Leclerc  LEC  Ferrari 2022-06-18 15:01:00      -48     -48   \n",
+       "112         Fernando Alonso  ALO  Alpine 2022-06-18 15:01:00        6       6   \n",
+       "342        Pierre Gasly  GAS  AlphaTauri 2022-06-18 15:01:00        9       9   \n",
+       "228           Lando Norris  NOR  Mclaren 2022-06-19 09:05:33        0       0   \n",
+       "389  Sebastian Vettel  VET  Aston Martin 2022-06-19 09:05:33        0       0   \n",
        "\n",
        "     Latest  Sentiment  Current Price  Season Start PriceSeason Price  \\\n",
-       "42      -58      -94.0           18.9                            18.0   \n",
-       "43       46      -48.0           18.8                            18.0   \n",
-       "110       1        5.0           12.3                            12.5   \n",
-       "112     -69        6.0           12.4                            12.5   \n",
-       "134     -84       15.0           23.8                            24.0   \n",
-       "228       0       -4.0           15.7                            16.0   \n",
-       "242      99        0.0           30.0                            31.0   \n",
-       "342     -90        9.0           13.0                            13.5   \n",
-       "387      48       54.0           11.5                            11.5   \n",
-       "389       0        2.0           11.6                            11.5   \n",
        "398       1        1.0           18.3                            17.5   \n",
+       "242      99        0.0           30.0                            31.0   \n",
+       "110       1        5.0           12.3                            12.5   \n",
+       "42      -58      -94.0           18.9                            18.0   \n",
+       "134     -84       15.0           23.8                            24.0   \n",
+       "387      48       54.0           11.5                            11.5   \n",
+       "43       46      -48.0           18.8                            18.0   \n",
+       "112     -69        6.0           12.4                            12.5   \n",
+       "342     -90        9.0           13.0                            13.5   \n",
+       "228       0       -4.0           15.7                            16.0   \n",
+       "389       0        2.0           11.6                            11.5   \n",
        "\n",
        "     Points/Million         ts diff  12 Hour diff  3 Hour diff  Latest diff  \\\n",
-       "42             1.66 0 days 01:53:18         -59.0        -88.0        -56.0   \n",
-       "43             1.67 0 days 00:35:58          46.0         46.0        104.0   \n",
-       "110            0.64 0 days 04:22:05          -8.0          3.0         -1.0   \n",
-       "112            0.64 0 days 00:35:58         -69.0        -65.0       -104.0   \n",
-       "134            1.31 0 days 01:53:18          22.0         10.0        -85.0   \n",
-       "228            1.01 0 days 18:04:33          50.0         37.0         11.0   \n",
-       "242            0.65 0 days 23:00:47          99.0         99.0         99.0   \n",
-       "342            0.82 0 days 00:35:58          -9.0        -11.0       -103.0   \n",
-       "387            0.90 0 days 01:53:18          -1.0         39.0         46.0   \n",
-       "389            0.82 0 days 18:04:33         -96.0        -96.0        -42.0   \n",
        "398            1.82 0 days 03:59:51          -9.0         -2.0          1.0   \n",
+       "242            0.65 0 days 23:00:47          99.0         99.0         99.0   \n",
+       "110            0.64 0 days 04:22:05          -8.0          3.0         -1.0   \n",
+       "42             1.66 0 days 01:53:18         -59.0        -88.0        -56.0   \n",
+       "134            1.31 0 days 01:53:18          22.0         10.0        -85.0   \n",
+       "387            0.90 0 days 01:53:18          -1.0         39.0         46.0   \n",
+       "43             1.67 0 days 00:35:58          46.0         46.0        104.0   \n",
+       "112            0.64 0 days 00:35:58         -69.0        -65.0       -104.0   \n",
+       "342            0.82 0 days 00:35:58          -9.0        -11.0       -103.0   \n",
+       "228            1.01 0 days 18:04:33          50.0         37.0         11.0   \n",
+       "389            0.82 0 days 18:04:33         -96.0        -96.0        -42.0   \n",
        "\n",
        "     Sentiment diff  Current Price diff  \n",
-       "42            -14.0                -0.1  \n",
-       "43             46.0                -0.1  \n",
-       "110           -88.0                 0.1  \n",
-       "112           -69.0                 0.1  \n",
-       "134           -64.0                 0.1  \n",
-       "228            94.0                -0.1  \n",
+       "398           -97.0                 0.1  \n",
        "242            99.0                -0.1  \n",
-       "342           -90.0                 0.1  \n",
+       "110           -88.0                 0.1  \n",
+       "42            -14.0                -0.1  \n",
+       "134           -64.0                 0.1  \n",
        "387             1.0                 0.1  \n",
-       "389           -94.0                 0.1  \n",
-       "398           -97.0                 0.1  "
+       "43             46.0                -0.1  \n",
+       "112           -69.0                 0.1  \n",
+       "342           -90.0                 0.1  \n",
+       "228            94.0                -0.1  \n",
+       "389           -94.0                 0.1  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cond_driver_price_change = (drivers_a['Current Price diff'].notna()) & (drivers_a['Current Price diff'] != 0)\n",
-    "drivers_a[cond_driver_price_change].dropna()"
+    "drivers_a[cond_driver_price_change].dropna().sort_values(by='ts')"
    ]
   },
   {
