Added Top X to Analysis and to Markdown

--- a/src/notebooks/f1_fantasy_track/03_analytics_f1_fantasy_tracker.ipynb
+++ b/src/notebooks/f1_fantasy_track/03_analytics_f1_fantasy_tracker.ipynb
@@ -5224,8 +5224,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "85212b70-afeb-4b00-9dbd-e83f46fefff7",
+   "execution_count": 57,
+   "id": "b8fe6dc8-f89b-4cc3-abf0-180a53db4a9e",
    "metadata": {},
    "outputs": [
     {
@@ -5361,7 +5361,7 @@
        "19      Norris"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5374,7 +5374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "id": "2e57d69e-1023-4afd-9ed0-3e22cda0dc80",
    "metadata": {},
    "outputs": [
@@ -5399,96 +5399,345 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>top_25</th>\n",
+       "      <th>top_50</th>\n",
+       "      <th>top_100</th>\n",
+       "      <th>top_200</th>\n",
+       "      <th>pct_top_25</th>\n",
+       "      <th>pct_top_50</th>\n",
+       "      <th>pct_top_100</th>\n",
+       "      <th>pct_top_200</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>last_name</th>\n",
-       "      <th>last_name_cross</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Hamilton</td>\n",
-       "      <td>VerstappenPerezLeclercStrollMagnussen</td>\n",
+       "      <th>Leclerc</th>\n",
+       "      <td>22</td>\n",
+       "      <td>38</td>\n",
+       "      <td>72</td>\n",
+       "      <td>126</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.630</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Hamilton</td>\n",
-       "      <td>RussellPerezLeclercOconStroll</td>\n",
+       "      <th>Perez</th>\n",
+       "      <td>15</td>\n",
+       "      <td>33</td>\n",
+       "      <td>57</td>\n",
+       "      <td>105</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Hamilton</td>\n",
-       "      <td>VerstappenLeclercSainzStrollMagnussen</td>\n",
+       "      <th>Verstappen</th>\n",
+       "      <td>15</td>\n",
+       "      <td>31</td>\n",
+       "      <td>63</td>\n",
+       "      <td>132</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.660</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Hamilton</td>\n",
-       "      <td>VerstappenPerezLeclercAlbonMagnussen</td>\n",
+       "      <th>Sainz</th>\n",
+       "      <td>13</td>\n",
+       "      <td>28</td>\n",
+       "      <td>48</td>\n",
+       "      <td>97</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0.485</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Hamilton</td>\n",
-       "      <td>VerstappenLeclercSainzStrollSchumacher</td>\n",
+       "      <th>Stroll</th>\n",
+       "      <td>10</td>\n",
+       "      <td>20</td>\n",
+       "      <td>34</td>\n",
+       "      <td>57</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>0.285</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>Russell</th>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>34</td>\n",
+       "      <td>68</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>0.340</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>Norris</td>\n",
-       "      <td>VerstappenLeclercSainzAlbonLatifi</td>\n",
+       "      <th>Ocon</th>\n",
+       "      <td>8</td>\n",
+       "      <td>14</td>\n",
+       "      <td>33</td>\n",
+       "      <td>66</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.330</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>996</th>\n",
-       "      <td>Norris</td>\n",
-       "      <td>VerstappenPerezSainzAlbonMagnussen</td>\n",
+       "      <th>Magnussen</th>\n",
+       "      <td>8</td>\n",
+       "      <td>14</td>\n",
+       "      <td>24</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.240</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>997</th>\n",
-       "      <td>Norris</td>\n",
-       "      <td>RussellPerezSainzOconBottas</td>\n",
+       "      <th>Bottas</th>\n",
+       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "      <td>25</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.210</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>998</th>\n",
-       "      <td>Norris</td>\n",
-       "      <td>VerstappenAlonsoLeclercOconMagnussen</td>\n",
+       "      <th>Albon</th>\n",
+       "      <td>7</td>\n",
+       "      <td>11</td>\n",
+       "      <td>25</td>\n",
+       "      <td>44</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.220</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>999</th>\n",
-       "      <td>Norris</td>\n",
-       "      <td>RussellPerezAlonsoLeclercMagnussen</td>\n",
+       "      <th>Alonso</th>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>25</td>\n",
+       "      <td>49</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Schumacher</th>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>17</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Latifi</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Norris</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vettel</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zhou</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ricciardo</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hamilton</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tsunoda</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gasly</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.060</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1000 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    last_name                         last_name_cross\n",
-       "0    Hamilton   VerstappenPerezLeclercStrollMagnussen\n",
-       "1    Hamilton           RussellPerezLeclercOconStroll\n",
-       "2    Hamilton   VerstappenLeclercSainzStrollMagnussen\n",
-       "3    Hamilton    VerstappenPerezLeclercAlbonMagnussen\n",
-       "4    Hamilton  VerstappenLeclercSainzStrollSchumacher\n",
-       "..        ...                                     ...\n",
-       "995    Norris       VerstappenLeclercSainzAlbonLatifi\n",
-       "996    Norris      VerstappenPerezSainzAlbonMagnussen\n",
-       "997    Norris             RussellPerezSainzOconBottas\n",
-       "998    Norris    VerstappenAlonsoLeclercOconMagnussen\n",
-       "999    Norris      RussellPerezAlonsoLeclercMagnussen\n",
+       "            top_25  top_50  top_100  top_200  pct_top_25  pct_top_50  \\\n",
+       "last_name                                                              \n",
+       "Leclerc         22      38       72      126        0.88        0.76   \n",
+       "Perez           15      33       57      105        0.60        0.66   \n",
+       "Verstappen      15      31       63      132        0.60        0.62   \n",
+       "Sainz           13      28       48       97        0.52        0.56   \n",
+       "Stroll          10      20       34       57        0.40        0.40   \n",
+       "Russell          8      15       34       68        0.32        0.30   \n",
+       "Ocon             8      14       33       66        0.32        0.28   \n",
+       "Magnussen        8      14       24       48        0.32        0.28   \n",
+       "Bottas           6      13       25       42        0.24        0.26   \n",
+       "Albon            7      11       25       44        0.28        0.22   \n",
+       "Alonso           4      10       25       49        0.16        0.20   \n",
+       "Schumacher       5       8       17       34        0.20        0.16   \n",
+       "Latifi           1       6       12       25        0.04        0.12   \n",
+       "Norris           1       4       10       31        0.04        0.08   \n",
+       "Vettel           2       4       14       39        0.08        0.08   \n",
+       "Zhou             0       1        5       17        0.00        0.02   \n",
+       "Ricciardo        0       0        0        0        0.00        0.00   \n",
+       "Hamilton         0       0        0        0        0.00        0.00   \n",
+       "Tsunoda          0       0        2        8        0.00        0.00   \n",
+       "Gasly            0       0        0       12        0.00        0.00   \n",
        "\n",
-       "[1000 rows x 2 columns]"
+       "            pct_top_100  pct_top_200  \n",
+       "last_name                             \n",
+       "Leclerc            0.72        0.630  \n",
+       "Perez              0.57        0.525  \n",
+       "Verstappen         0.63        0.660  \n",
+       "Sainz              0.48        0.485  \n",
+       "Stroll             0.34        0.285  \n",
+       "Russell            0.34        0.340  \n",
+       "Ocon               0.33        0.330  \n",
+       "Magnussen          0.24        0.240  \n",
+       "Bottas             0.25        0.210  \n",
+       "Albon              0.25        0.220  \n",
+       "Alonso             0.25        0.245  \n",
+       "Schumacher         0.17        0.170  \n",
+       "Latifi             0.12        0.125  \n",
+       "Norris             0.10        0.155  \n",
+       "Vettel             0.14        0.195  \n",
+       "Zhou               0.05        0.085  \n",
+       "Ricciardo          0.00        0.000  \n",
+       "Hamilton           0.00        0.000  \n",
+       "Tsunoda            0.02        0.040  \n",
+       "Gasly              0.00        0.060  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dn_cross = driver_names.merge(my_c['last_name'], how='cross', suffixes=['', '_cross'])\n",
+    "combos = [25, 50, 100, 200]\n",
+    "dn_crosses = []\n",
+    "\n",
+    "for c in combos:\n",
+    "\n",
+    "    dn_cross = driver_names.merge(my_c['last_name'].head(c), how='cross', suffixes=['', '_cross'])\n",
+    "    dn_cross['member'] = dn_cross.apply(lambda x: x['last_name'] in x['last_name_cross'], axis=1).astype(int)\n",
+    "    dn_crosses.append(dn_cross.groupby('last_name')['member'].sum())\n",
+    "    \n",
+    "dn_cross = pd.concat(dn_crosses, axis=1)\n",
+    "dn_cross.columns = [f'top_{c}' for c in combos]\n",
+    "dn_cross = dn_cross.sort_values(by='top_50', ascending=False)\n",
+    "\n",
+    "for c in combos:\n",
+    "    col = f'pct_top_{c}'\n",
+    "    dn_cross[col] = dn_cross[f'top_{c}'] / c\n",
+    "\n",
     "dn_cross"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "c84525b9-67ee-4d12-88ea-2728e4ee1359",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'| last_name   |   top_25 |   top_50 |   top_100 |   top_200 |   pct_top_25 |   pct_top_50 |   pct_top_100 |   pct_top_200 |\\n|:------------|---------:|---------:|----------:|----------:|-------------:|-------------:|--------------:|--------------:|\\n| Leclerc     |       22 |       38 |        72 |       126 |         0.88 |         0.76 |          0.72 |         0.63  |\\n| Perez       |       15 |       33 |        57 |       105 |         0.6  |         0.66 |          0.57 |         0.525 |\\n| Verstappen  |       15 |       31 |        63 |       132 |         0.6  |         0.62 |          0.63 |         0.66  |\\n| Sainz       |       13 |       28 |        48 |        97 |         0.52 |         0.56 |          0.48 |         0.485 |\\n| Stroll      |       10 |       20 |        34 |        57 |         0.4  |         0.4  |          0.34 |         0.285 |\\n| Russell     |        8 |       15 |        34 |        68 |         0.32 |         0.3  |          0.34 |         0.34  |\\n| Ocon        |        8 |       14 |        33 |        66 |         0.32 |         0.28 |          0.33 |         0.33  |\\n| Magnussen   |        8 |       14 |        24 |        48 |         0.32 |         0.28 |          0.24 |         0.24  |\\n| Bottas      |        6 |       13 |        25 |        42 |         0.24 |         0.26 |          0.25 |         0.21  |\\n| Albon       |        7 |       11 |        25 |        44 |         0.28 |         0.22 |          0.25 |         0.22  |\\n| Alonso      |        4 |       10 |        25 |        49 |         0.16 |         0.2  |          0.25 |         0.245 |\\n| Schumacher  |        5 |        8 |        17 |        34 |         0.2  |         0.16 |          0.17 |         0.17  |\\n| Latifi      |        1 |        6 |        12 |        25 |         0.04 |         0.12 |          0.12 |         0.125 |\\n| Norris      |        1 |        4 |        10 |        31 |         0.04 |         0.08 |          0.1  |         0.155 |\\n| Vettel      |        2 |        4 |        14 |        39 |         0.08 |         0.08 |          0.14 |         0.195 |\\n| Zhou        |        0 |        1 |         5 |        17 |         0    |         0.02 |          0.05 |         0.085 |\\n| Ricciardo   |        0 |        0 |         0 |         0 |         0    |         0    |          0    |         0     |\\n| Hamilton    |        0 |        0 |         0 |         0 |         0    |         0    |          0    |         0     |\\n| Tsunoda     |        0 |        0 |         2 |         8 |         0    |         0    |          0.02 |         0.04  |\\n| Gasly       |        0 |        0 |         0 |        12 |         0    |         0    |          0    |         0.06  |'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dn_cross.to_markdown()"
    ]
   },
   {
